apps/home/miniflux/miniflux-values-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux
spec:
  template:
    spec:
      containers:
        - name: miniflux
